Sostituito il costruttore deprecato new Integer(0)) con Integer.valueOf(0)